--- a/src/app/css/app.css
+++ b/src/app/css/app.css
@@ -18,6 +18,41 @@
   font-size: large;
 }
 
+.search-field {
+  width: 200px;
+  margin: 10px;
+  padding: 5px;
+}
+
+.search-button {
+  padding: 5px;
+  color: white;
+  font-weight: bold;
+  font-size: 17px;
+  background-color: cornflowerblue;
+  border: none;
+  border-radius: 5px;
+}
+
+.search-button:hover {
+  background-color: red;
+}
+
+.concept-item {
+  border: 1px solid red;
+  margin: 5px;
+}
+
+.selected-concept-item {
+  border: 1px solid cornflowerblue;
+  background: cornflowerblue;
+  margin: 5px;
+}
+
+.concept-item:hover {
+  background: red;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
