--- a/src/app/css/app.css
+++ b/src/app/css/app.css
@@ -53,7 +53,26 @@
   background: red;
 }
 
+.alt-lists {
+  display: flex;
+  border: red 1px solid;
+  justify-content: center;
+}
+
+.alt-list{
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  font-size: 12px;
+  margin: 10px
+}
+
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+.hidden {
+  display: none;
 }
