fixed some bugs and did some styling

--- a/src/app/css/app.css
+++ b/src/app/css/app.css
@@ -1,10 +1,14 @@
+*{
+  font-family: 'Ubuntu', sans-serif;
+}
+
 .App {
   text-align: center;
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  animation: float infinite 2s linear;
+  height: 70px;
 }
 
 .App-header {
@@ -18,6 +22,28 @@
   font-size: large;
 }
 
+.autocomplete-list {
+  position: relative;
+  border: 1px solid lightgray;
+  background: white;
+  width: 400px;
+  text-align: left;
+  display: inline-flex;
+  flex-direction: column;
+  top: -12px;
+  right: 38px;
+  width: 50%;
+  padding: 5px;
+  font-size: 18px;
+}
+
+.autocomplete-list-item {
+  margin-bottom: 4px;
+  overflow: hidden;
+}
+.autocomplete-list-item:hover {
+  background: #d0ebf4;
+}
 .search-errors{
   background: tomato;
   padding: 5px;
@@ -76,6 +102,11 @@
   margin: 10px;
 }
 
+.list-message {
+  margin: 10px;
+  font-size: 18px;
+}
+
 .selected {
   border: 1px solid cornflowerblue;
   background: cornflowerblue;
@@ -130,6 +161,14 @@
 @keyframes loading-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+@keyframes float {
+  0% {transform: translateY(0px) rotate(5deg);}
+
+  50% {transform: translateY(0px) rotate(-5deg);}
+
+  100% {transform: translateY(0px) rotate(5deg);}
 }
 
 .loading {
